--- a/exp_pro/package.json
+++ b/exp_pro/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.9",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongodb": "^5.3.0"
   }
 }
