--- a/exp_pro/package.json
+++ b/exp_pro/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "mongodb": "^5.3.0"
+    "mongodb": "^5.3.0",
+    "mongoose": "^7.1.0"
   }
 }
