--- a/react-project-api/package.json
+++ b/react-project-api/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongoose": "^7.1.1"
+    "mongoose": "^7.1.1",
+    "sha1": "^1.1.1"
   }
 }
