--- a/react-project-api/package.json
+++ b/react-project-api/package.json
@@ -14,6 +14,8 @@
     "express-fileupload": "^1.4.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.1.1",
-    "sha1": "^1.1.1"
+    "random-strings": "^0.0.1",
+    "sha1": "^1.1.1",
+    "unique-string": "^3.0.0"
   }
 }
