--- a/react-project-api/package.json
+++ b/react-project-api/package.json
@@ -4,6 +4,7 @@
   "description": "this is sample project",
   "main": "app.js",
   "scripts": {
+    "start" : "nodemon app",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "james",
